<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/app_logo_about_us"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/app_name"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/text_app_name"
                        fontPath="fonts/Montserrat-SemiBold_0.otf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="@string/app_name"
                        android:textColor="@color/about_title"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        tools:ignore="MissingPrefix" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/Verson"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="6dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_version" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/line_about" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            fontPath="fonts/Montserrat-SemiBold_0.otf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/version"
                            android:textColor="@color/about_title"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="MissingPrefix" />

                        <TextView
                            android:id="@+id/text_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/version"
                            android:textColor="@color/about_text"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="4dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_user_ab" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/line_about" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            fontPath="fonts/Montserrat-SemiBold_0.otf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/company"
                            android:textColor="@color/about_title"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="MissingPrefix" />

                        <TextView
                            android:id="@+id/text_company"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:text="@string/company"
                            android:textColor="@color/about_text"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:id="@+id/linearLayout_email_about_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="4dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_email_ab" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/line_about" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:orientation="vertical">

                        <TextView
                            fontPath="fonts/Montserrat-SemiBold_0.otf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textColor="@color/about_title"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="MissingPrefix" />

                        <TextView
                            android:id="@+id/text_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:text="@string/email"
                            android:textColor="@color/about_text"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:id="@+id/linearLayout_web_about_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="4dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_web" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/line_about" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            fontPath="fonts/Montserrat-SemiBold_0.otf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/website"
                            android:textColor="@color/about_title"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="MissingPrefix" />

                        <TextView
                            android:id="@+id/text_website"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:text="@string/website"
                            android:textColor="@color/about_text"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:id="@+id/linearLayout_contact_about_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="4dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_call" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/line_about" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            fontPath="fonts/Montserrat-SemiBold_0.otf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contact"
                            android:textColor="@color/about_title"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="MissingPrefix" />

                        <TextView
                            android:id="@+id/text_contact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:text="@string/contact"
                            android:textColor="@color/about_text"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        fontPath="fonts/Montserrat-SemiBold_0.otf"
                        tools:ignore="MissingPrefix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/about"
                        android:textColor="@color/about_title"
                        android:textSize="18sp"
                        android:textStyle="bold"
                         />

                    <WebView
                        android:id="@+id/webView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/row_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

</RelativeLayout>
